--- a/angular.json
+++ b/angular.json
@@ -88,6 +88,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bulma/css/bulma.min.css",
               "src/styles.css"
             ],
             "scripts": []
