--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "bulma-block-list": "^0.4.0",
     "font-awesome": "^4.7.0",
